--- a/FlappyCube/Packages/manifest.json
+++ b/FlappyCube/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.postprocessing": "2.1.2",
     "com.unity.probuilder": "4.0.2",
     "com.unity.purchasing": "2.0.3",
+    "com.unity.render-pipelines.high-definition": "4.9.0-preview",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.visualeffectgraph": "4.8.0-preview",
     "com.unity.modules.ai": "1.0.0",
